spelling mistakes fixed

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div id="main-header">
             <!-- Badge Colors currently are: green (stable), blue(development) red(broken) orange(unstable) -->
             <h1>Intranet Documentation <sup><badge class="blue">0.0.8</badge></sup></h1>
-            <p>This is the only offical Documentation for the Intranet Project. You can check each version by simply adding the version number in the URL. For Example: <b>/v/0.0.1/</b> There you can find the changelog for each version, too.</p>
+            <p>This is the only official Documentation for the Intranet Project. You can check each version by simply adding the version number in the URL. For Example: <b>/v/0.0.1/</b> There you can find the changelog for each version, too.</p>
             <p>This documentation will show you how to get started with the basic setup and what is important where you have to watch out during setup.</p>
         </div>
         <div class="documentation">
             <section id="gettingstarted">
                 <h2>So let's get started!</h2>
-                <p>There are some things you want to pay attention to. First let's clear out how out version system works. <b>e.g. v0.0.4</b> This is a alpha release. We tend to keep up the repository up to date, as good as possible to clear out and issues with merging. In the alpha release we do not gurantee any functionality or support for any versions. If we take for example our version v0.0.2, you can see that the whole php/mysql part is coded with the mysql extensions for php. That is no longer supported in php6, so our scripts won't work on the following php versions. In v.0.0.8 we started moving towards mysqli, which will stay supported at least for the next php version.</p>
+                <p>There are some things you want to pay attention to. First let's clear out how out version system works: <b>e.g. v0.0.4</b> This is an alpha release. We tend to keep up the repository up to date, as good as possible to clear out and issues with merging. In the alpha release we do not guarantee any functionality or support for any versions. If we take for example our version v0.0.2, you can see that the whole PHP/MySQL part is coded with the mysql extensions for PHP. That is no longer supported in PHP6, so our scripts won't work on the following PHP versions. In v.0.0.8 we started moving towards MySQLi, which will stay supported at least for the next PHP version.</p>
                 <p>Let's take another version number: <b>v0.1.2</b>. All that means is that we got is the fact, that the last Beta release is two alphas away. If you want to be sure about your version support, then you should use one of the releases. If you do not care that much and believe, that the Beta builds are good enough, then you can go with those.</p>
-                <p>And we got another version format to check out: <b>v1.4.32</b>. That is pretty simple as well. That basicly means, that we are 4 Betas and 32 Alphas past the last release. In a release we tested and experienced the features so we can gurantee maximum safety and relibility.</p>
-                <p><b>So to keep it short:</b> The first digit is the offical realease, where we can say that everything works fine. The second is the Beta. Here we don't exactly know if everything is working correctly, so we are testing it first. And the third one is basiclly just interessting if you're a developer yourself.</p>
+                <p>And we got another version format to check out: <b>v1.4.32</b>. That is pretty simple as well. That basically means, that we are 4 Betas and 32 Alphas past the last release. In a release we tested and experienced the features so we can guarantee maximum safety and reliability.</p>
+                <p><b>So to keep it short:</b> The first digit is the official release, where we can say that everything works fine. The second is the Beta. Here we don't exactly know if everything is working correctly, so we are testing it first. And the third one is basically just interesting if you're a developer yourself.</p>
             </section>
             <hr style="width: 100%">
             <section id="changelog">
