That's it for today

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="container">
         <div id="main-header">
             <!-- Badge Colors currently are: green (stable), blue(development) red(broken) orange(unstable) -->
-            <h1>Intranet Documentation <sup><badge class="blue version">0.0.12</badge></sup></h1>
+            <h1>Intranet Documentation <sup><badge class="blue version">0.1.0</badge></sup></h1>
             <p>This is the only official Documentation for the Intranet Project. You can check each version by simply adding the version number in the URL. For Example: <b>/v/0.0.1/</b> There you can find the changelog for each version, too.</p>
             <p>This documentation will show you how to get started with the basic setup and what is important where you have to watch out during setup.</p>
         </div>
@@ -49,6 +49,7 @@
                 <p>If you want to use it, we'll show you now how you can start it. Basiclly after that, you are good to go. You just have to run a basic command in the command line:</p>
                 <pre class="prettyprint linenums">
 get http://IntranetProject.net/setup/script/script.sh</pre>
+                <p>And that's all you need to do. Now you can enter the URL of your Pi in your Browsers URL-Bar and let the Database Setup script run everything. Click <a href="#hostname">here</a> if you want to know how to change the <b>hostname</b> of your Pi (different name in Network)</p>
             </section>
         </div>
         <div id="footer">
