--- a/v/0.1.0/index.html
+++ b/v/0.1.0/index.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/code.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/code.css" rel="stylesheet">
 </head>
 
 <body id="body">
@@ -84,8 +84,8 @@ sudo nano /etc/hostname</pre>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
-    <script src="js/download.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/download.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
