--- a/v/index.html
+++ b/v/index.html
@@ -1,3 +1,8 @@
-<ul>
-    <li><a href="0.1.0/">v0.1.0</a></li>
-</ul>
+<html>
+
+<head>
+    <title>Redirecting</title>
+    <meta http-equiv="refresh" content="0; URL=../index.html">
+</head>
+
+</html>
