edit version page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,49 @@
-<ul>
-    <li><a href="v/">Docs</a></li>
-</ul>
+<html>
+    <head>
+    <link type="text/css" rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="container">
+        <h1>Docs</h1>
+        <div class="release">
+            <h2>Release</h2>
+            <div class="boxr">
+
+                <a href="#">v 1.0.0</a>
+                <a href="#">v 2.0.0</a>
+
+            </div>
+        </div>
+        <div class="beta">
+            <h2>Beta</h2>
+            <div class="boxb">
+
+                <a href="#">v 0.1.0</a>
+                <a href="#">v 0.2.0</a>
+                <a href="#">v 0.3.0</a>
+
+            </div>
+        </div>
+        <div class="alpha">
+            <h2>Alpha</h2>
+            <div class="boxa">
+
+                <a href="#">v 0.0.1</a>
+                <a href="#">v 0.0.2</a>
+                <a href="#">v 0.0.3</a>
+                <a href="#">v 0.0.4</a>
+                <a href="#">v 0.0.1</a>
+                <a href="#">v 0.0.2</a>
+                <a href="#">v 0.0.3</a>
+                <a href="#">v 0.0.4</a>
+                <a href="#">v 0.0.1</a>
+                <a href="#">v 0.0.2</a>
+                <a href="#">v 0.0.3</a>
+                <a href="#">v 0.0.4</a>
+
+            </div>
+        </div>
+    </div>
+</body>
+</html>
