--- a/v/0.1.0/index.html
+++ b/v/0.1.0/index.html
@@ -24,12 +24,15 @@
             <li><a class="scroll" href="#gettingstarted">Getting started</a></li>
             <li><a class="scroll" href="#hardware">Hardware</a></li>
             <li><a class="scroll" href="#software">Software </a></li>
+            <li><a class="scroll" href="#ftp">FTP</a></li>
+            <li><a class="scroll" href="#ssh">SSH</a></li>
             <li><a class="scroll" href="#hostname">Hostname</a></li>
+            <li><a class="scroll" href="#manualinstallation">Manual Installation</a></li>
         </ul>
     </div>
     <div id="container">
         <div id="main-header">
-            <!-- Badge Colors currently are: green (stable), blue(development) red(broken) orange(unstable) -->
+            <!-- Badge Colors currently are: green (release), orange(beta) red(alpha) -->
             <h1>Intranet Documentation <sup><badge class="blue version">0.1.0</badge></sup></h1>
             <p>This is the only official Documentation for the Intranet Project. You can check each version by simply adding the version number in the URL (only works for betas and releases). For Example: <b>/v/0.1.0/</b> There you can find the changelog for each version, too.</p>
             <p>This documentation will show you how to get started with the basic setup and what is important where you have to watch out during setup.</p>
@@ -52,6 +55,7 @@
                 <pre class="prettyprint linenums">
 get http://IntranetProject.net/setup/script/script.sh</pre>
                 <p>And that's all you need to do. Now you can enter the URL of your Pi in your Browsers URL-Bar and let the Database Setup script run everything. Click <a href="#hostname">here</a> if you want to know how to change the <b>hostname</b> of your Pi (different name in Network)</p>
+                <b>Click <a href="#manualinstallation">here</a> if you want to install manually.</b>
             </section>
             <hr style="width: 100%">
             <section id="software">
@@ -65,7 +69,23 @@ sudo nano /var/www/html/php/config.php</pre>
                 <img style="width: 50%;" src="img/phpmyadmin_interface.png" />
                 <p>In the left Navbar click on "New" and create a new Database. Now you can go back to your config.php and insert the MySQL Data. After that visit the Pi in your Browser and let the setup script set the tables up.</p>
             </section>
+            <hr style="width: 100%">
+            <section id="ftp">
+                <h2>FTP</h2>
+                <p>You can use the FTP Protocol to access your Pi via a FTP Client. You can use <a target="_blank" href="https://filezilla-project.org/">FilleZilla</a> or <a target="_blank" href="https://winscp.net/eng/index.php">WinSCP</a> to connect to your Pi. In the following, we'll use WinSCP since it has a build in edit funtion. Start the Programm and enter the Username "pi" and your password (If you didn't change it, it'll be "raspberry").</p>
+                <img src="img/winscp_login.png" />
+                <p>Navigate to the folder where your Intranet is stored. By default it's in the <b>/var/www/html</b> folder. Now you can open and edit all important files. This is going to be very nice to have, if you want to install new modules.</p>
+            </section>
             <hr style="width: 100%;">
+            <section id="ssh">
+                <h2>SSH</h2>
+                <p>If you need Console Access to your Pi, you can use SSH. In the following step you'll learn how to active SSH and connect to it from your Pc. For that you need a Software called Putty, which you can download <a target="_blank" href="http://www.putty.org/">here</a>. Enter your IP and press "Enter":</p>
+                <img src="img/putty_sett.png" />
+                <p>Now, enter "pi" as the user and enter your Password (default password is "raspberry" (you won't be able to see it, while typing)):</p>
+                <img src="img/putty_conn.png" />
+                <p><b>Important:</b> If you cannot connect immediately, you have to connect to your Pi with a Monitor and Mouse and Keyboard. Login and open up the Terminal. Enter: <b>sudo raspi-config" and search for the option "ssh" and be sure it is actived.</b></p>
+            </section>
+            <hr style="width: 100%">
             <section id="hostname">
                 <h2>Change Hostname</h2>
                 <p>Since your Router has a DNS Server build in, you can change the IP Adress of your Pi to a static name. It's pretty simple.</p>
@@ -81,11 +101,29 @@ sudo nano /etc/hostname</pre>
                 <p>Now, you are ready to restart the Pi. Commit the changes to the system by typing <b>sudo /etc/init.d/hostname.sh</b> and after that <b>sudo reboot</b> in your console.</p>
                 <p>Back online, you should see (and access) the Pi over the name, you just set. If it doesn't work, check on your Routers Interface if the name was applied.</p>
             </section>
+            <hr style="width: 100%">
+            <section id="manualinstallation">
+                <h2>Manual Installation</h2>
+                <p>If you don't strust our script (you can check the source <a href="https://github.com/IntranetProject/intranet_page/blob/master/setup/script/script.sh">here</a>), you can run each step by yourself. To guide you through this process, we collected all commands here.</p>
+                <p>Start by updating and upgrading your Pi's software with the following two commands:</p>
+                <pre class="prettyprint linenums">
+apt-get update
+apt-get upgrade</pre>
+                <p>After that, you need to install the necessary software (apache2, php5 and mysql5). Run the following commands:</p>
+                <pre class="prettyprint linenums">
+apt-get install apache2 apache2-doc apache2-utils
+apt-get install libapache2-mod-php5 php5 php-pear php5-xcache
+apt-get install php5-mysql
+apt-get install mysql-server mysql-client</pre>
+                <p>During the process you'll be asked to give a password. You need to remember that. Now, that everything is installed correctly we can continue by putting our main Intranet in the folder of the apache Webserver. Connect of <a href="#ftp">FTP</a> to your Pi and download the version you want from our <a href="https://github.com/IntranetProject/intranet_frontend/releases">GitHub Release Page</a>. Navigate to the <b>/var/www/</b> folder and delete the html folder. Unzip the downloaded package and rename the folder to "html". Now you can move it onto your Pi.</p>
+            </section>
         </div>
     </div>
+    <a href="#" class="go-top">Top</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
-    <script src="../js/download.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/download.js" type="text/javascript"></script>
+    <script src="../js/script.js" type="text/javascript"></script>
+    <script src="../js/scroll.js" type="text/javascript"></script>
 </body>
 
 </html>
