further editing on version page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-    <head>
+
+<head>
     <link type="text/css" rel="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
@@ -9,41 +11,28 @@
         <div class="release">
             <h2>Release</h2>
             <div class="boxr">
-
                 <a href="#">v 1.0.0</a>
                 <a href="#">v 2.0.0</a>
-
             </div>
         </div>
         <div class="beta">
             <h2>Beta</h2>
             <div class="boxb">
-
                 <a href="#">v 0.1.0</a>
                 <a href="#">v 0.2.0</a>
                 <a href="#">v 0.3.0</a>
-
             </div>
         </div>
         <div class="alpha">
             <h2>Alpha</h2>
             <div class="boxa">
-
                 <a href="#">v 0.0.1</a>
                 <a href="#">v 0.0.2</a>
                 <a href="#">v 0.0.3</a>
                 <a href="#">v 0.0.4</a>
-                <a href="#">v 0.0.1</a>
-                <a href="#">v 0.0.2</a>
-                <a href="#">v 0.0.3</a>
-                <a href="#">v 0.0.4</a>
-                <a href="#">v 0.0.1</a>
-                <a href="#">v 0.0.2</a>
-                <a href="#">v 0.0.3</a>
-                <a href="#">v 0.0.4</a>
-
             </div>
         </div>
     </div>
 </body>
+
 </html>
