added first Docs :)

--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
         <div class="release">
             <h2>Release</h2>
             <div class="boxr">
-                <a href="#">v 1.0.0</a>
-                <a href="#">v 2.0.0</a>
+                <!--<a href="#">v 1.0.0</a>
+                <a href="#">v 2.0.0</a> -->
             </div>
         </div>
         <div class="beta">
             <h2>Beta</h2>
             <div class="boxb">
-                <a href="#">v 0.1.0</a>
+                <!--<a href="#">v 0.1.0</a>
                 <a href="#">v 0.2.0</a>
-                <a href="#">v 0.3.0</a>
+                <a href="#">v 0.3.0</a> -->
             </div>
         </div>
         <div class="alpha">
             <h2>Alpha</h2>
             <div class="boxa">
-                <a href="#">v 0.0.1</a>
-                <a href="#">v 0.0.2</a>
-                <a href="#">v 0.0.3</a>
-                <a href="#">v 0.0.4</a>
+                <a href="v/0.0.12/index.html">v0.0.12</a>
             </div>
         </div>
     </div>
