--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="release">
             <h2>Release</h2>
             <div class="boxr">
-                <a href="#">v1.0.0</a>
+                <!--<a href="#">v1.0.0</a>-->
             </div>
         </div>
         <div class="beta">
             <h2>Beta</h2>
             <div class="boxb">
-                <a href="#">v0.1.0</a>
+                <!--<a href="#">v0.1.0</a>-->
             </div>
         </div>
         <div class="alpha">
